--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
-<html lang="en">
-<head>
-    
-</head>
-
-</html>
+<!DOCTYPE html>
+<h1>Hi, This is my first attempt at a website</h1>
+    <p>Name: Tim</p>
+    <Ul>
+            <li>Born: <a href="https://en.wikipedia.org/wiki/Chicago">Chicago</a></li>
+            <li>Teams: Chicago Teams<img src-"https://upload.wikimedia.org/wikipedia/en/thumb/6/67/Chicago_Bulls_logo.svg/1200px-Chicago_Bulls_logo.svg.png"></li>
+            <li>Background: S. Korea</li>
+    </Ul>
