--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <h1>Hi, This is my first attempt at a website</h1>
     <p>Name: Tim</p>
     <Ul>
@@ -6,3 +7,4 @@
             <li>Teams: Chicago Teams<img src-"https://upload.wikimedia.org/wikipedia/en/thumb/6/67/Chicago_Bulls_logo.svg/1200px-Chicago_Bulls_logo.svg.png"></li>
             <li>Background: S. Korea</li>
     </Ul>
+</html>
